ci/templates/github-event-source-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ci-tls
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
  - secretName: ci-tls
    hosts:
    - ci.fugue-state.io
  rules:
  - host: ci.fugue-state.io
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: github
            port:
              number: 80
